--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -74,7 +74,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="26dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -87,12 +88,12 @@
                     android:id="@+id/title"
                     android:textColor="@android:color/black"/>
 
-                <ImageView
+            <!--    <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:id="@+id/options"
                     android:background="@drawable/more"/>
-
+-->
             </LinearLayout>
 
             <TextView
@@ -115,7 +116,7 @@
                 android:id="@+id/time"
                 android:textSize="12sp"
                 android:textColor="@android:color/black"/>
-
+<!--
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -130,7 +131,7 @@
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp" />
-
+-->
         </LinearLayout>
 
     </LinearLayout>
