Зміна у макетах. Виправлення багів з неправельним відображенням

--- a/app/src/main/res/layout/activity_event_list.xml
+++ b/app/src/main/res/layout/activity_event_list.xml
@@ -60,6 +60,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:layout_margin="16dp"
+        android:backgroundTint="@color/gray"
+        android:tint="@color/black"
+        app:borderWidth="1dp"
         android:src="@drawable/add"
         app:fabSize="auto"
         app:rippleColor="@color/black"
