--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -62,6 +62,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:layout_marginTop="4dp"
             android:ems="10"
             android:inputType="text"
