--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -8,13 +8,14 @@
 
     <TextView
         android:id="@+id/eventNameTV"
-        android:layout_width="202dp"
-        android:layout_height="37dp"
+        android:layout_width="196dp"
+        android:layout_height="83dp"
         android:layout_marginTop="32dp"
-        android:fontFamily="monospace"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Event Name"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
+
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,29 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventNameTV"
-        app:srcCompat="@drawable/ic_today_black_24dp" />
-
-    <TextView
-        android:id="@+id/dateTV"
-        android:layout_width="282dp"
-        android:layout_height="29dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="monospace"
-        android:text="  "
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventNameTV" />
-
+    <!--
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="wrap_content"
@@ -55,53 +34,99 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/repeatTV"
         app:srcCompat="@drawable/location_on_24" />
+-->
+
+    <TextView
+        android:id="@+id/dateTV"
+        android:layout_width="282dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/poppins"
+        android:text="  "
+        android:textColor="@color/gray"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eventNameTV" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="60dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:srcCompat="@drawable/notes_24" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="36dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/eventNameTV"
+        app:srcCompat="@drawable/ic_today_black_24dp" />
 
     <ImageView
         android:id="@+id/imageView8"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="44dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@drawable/notifications" />
-
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reminderTV"
-        app:srcCompat="@drawable/repeat_24" />
-
-    <TextView
-        android:id="@+id/reminderTV"
-        android:layout_width="283dp"
-        android:layout_height="62dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="monospace"
-        android:text="  "
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTV" />
 
     <TextView
         android:id="@+id/repeatTV"
         android:layout_width="282dp"
         android:layout_height="42dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="26dp"
-        android:fontFamily="monospace"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/poppins"
         android:text="  "
         android:textColor="@color/gray"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reminderTV" />
 
+    <TextView
+        android:id="@+id/noteTV"
+        android:layout_width="286dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="92dp"
+        android:fontFamily="@font/poppins"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reminderTV" />
+
+    <TextView
+        android:id="@+id/reminderTV"
+        android:layout_width="283dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins"
+        android:text="  "
+        android:textColor="@color/gray"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dateTV" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reminderTV"
+        app:srcCompat="@drawable/repeat_24" />
+
+    <!--
     <TextView
         android:id="@+id/locationTV"
         android:layout_width="285dp"
@@ -113,28 +138,7 @@
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/repeatTV" />
-
-    <ImageView
-        android:id="@+id/imageView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
-        app:srcCompat="@drawable/notes_24" />
-
-    <TextView
-        android:id="@+id/noteTV"
-        android:layout_width="286dp"
-        android:layout_height="63dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="monospace"
-        android:textColor="@color/gray"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/locationTV" />
+-->
 
     <Button
         android:id="@+id/editButton"
@@ -142,7 +146,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="28dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/gray1"
         android:drawableBottom="@drawable/ic_create"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -153,7 +157,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="12dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/gray1"
         android:drawableBottom="@drawable/ic_share"
         app:layout_constraintEnd_toStartOf="@+id/editButton"
         app:layout_constraintTop_toTopOf="parent" />
