--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,13 @@
         android:id="@+id/buttonAppBar"
         android:layout_gravity="bottom"
         app:fabCradleMargin="10dp"
-        app:fabCradleRoundedCornerRadius="50dp">
+        app:fabCradleRoundedCornerRadius="50dp"
+        >
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/bottomNavigation"
+
             android:layout_marginEnd="20dp"
             app:labelVisibilityMode="labeled"
             android:background="@android:color/transparent"
@@ -36,6 +38,7 @@
         android:backgroundTint="@color/white"
         android:id="@+id/fabadd"
         android:src="@drawable/add"
+        app:borderWidth="1dp"
         app:layout_anchor="@id/buttonAppBar"
         app:maxImageSize="32dp"
         android:tint="@color/black"/>
