--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -16,7 +16,7 @@
         android:drawableRight="@drawable/baseline_skip_next_24"
         android:fontFamily="@font/poppins_semibold"
         android:padding="8dp"
-        android:text="Skip"
+        android:text="@string/skip"
         android:textSize="14sp"
         app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/backButton"
-        android:text="Back"
+        android:text="@string/back"
         android:textSize="18sp"
         android:fontFamily="@font/poppins_semibold"
         android:layout_marginStart="15dp"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nextButton"
-        android:text="Next"
+        android:text="@string/next"
         android:textSize="18sp"
         android:fontFamily="@font/poppins_semibold"
         android:layout_marginEnd="15dp"
