--- a/app/src/main/res/layout/activity_weekly_list.xml
+++ b/app/src/main/res/layout/activity_weekly_list.xml
@@ -31,7 +31,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/gray1"
         app:srcCompat="@drawable/ic_today_black_24dp" />
 
     <TextView
