--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,6 +8,8 @@
         android:id="@+id/search_query"
         android:layout_width="345dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:layout_marginStart="45dp"
         android:layout_marginTop="20dp"
         android:hint="@string/search" />
