--- a/app/src/main/res/layout/slider_screen.xml
+++ b/app/src/main/res/layout/slider_screen.xml
@@ -8,18 +8,18 @@
     app:flow_horizontalAlign="center">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
         android:id="@+id/sliderImage"
+        android:layout_width="match_parent"
+        android:layout_height="283dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/time_management"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/time_management" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sliderTitle"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="16dp"
         android:text="@string/screen1"
         android:textSize="30sp"
         android:textAlignment="center"
@@ -31,7 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/sliderDesk"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="14dp"
         android:text="@string/screen1desk"
         android:textSize="20sp"
         android:layout_marginHorizontal="30dp"
