--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.SevenApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/black</item>
+        <item name="colorControlActivated">@color/gray</item> <!-- Колір контролю в стані активності -->
+
 
     </style>
-
+    <style name="CustomToolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="titleTextColor">@android:color/black</item>
+        <item name="subtitleTextColor">@android:color/black</item>
+    </style>
     <style name="Splash" parent="Base.Theme.SevenApp">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
