--- a/app/src/main/res/xml/event_widget_info.xml
+++ b/app/src/main/res/xml/event_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/event_widget"
     android:minWidth="300dp"
     android:minHeight="50dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/empty"
     android:previewLayout="@layout/event_widget"
     android:resizeMode="horizontal|vertical"
     android:targetCellWidth="1"
